--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-paper": "^4.12.1",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.13.1",
+    "react-native-sound": "^0.11.2",
     "react-native-vector-icons": "^9.1.0",
     "react-redux": "^8.0.2",
     "redux": "^4.2.0"
